--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;600;800&display=swap');
+
 body{
-    margin: 0;
-    padding: 0;
     height: 100vh;
     width: 100vw;
+    background-color: #ececec;
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+#container{
+    padding-top: 35vh;
+    margin-left: 250px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+nav{
+    background-color: #2b3133;
+    color: aliceblue;
+    position: fixed;
+    width: 200px;
+    height: 100vh;
+    font-weight: 600;
+}
+.navItem{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+nav a{
+    text-decoration: none;
+    font-size: 2rem;
+    color: #1daade;
+}
+#card{
+    width: 250px;
+    height: 340px;
+    padding: 25px;
+    margin-bottom: 30px;
+    border-radius: 15px;
+    background: #85bfd4; 
+    font-size: 1.2rem;
+}
+#btn-link{
+    text-decoration: none;
+    background-color: #ececec;
+    padding: 10px;
+    border-radius: 10px;
+    color: #000;
+    text-align: center;
 }
 
-#btn{
-    margin-top: 20vh;
-    margin-left: 45vw;
-}
+
+@media screen and (max-width: 1500px) {
+    .container{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+@media screen and (max-width: 1180px) {
+    .container{
+        grid-template-columns: 1fr 1fr;
+    }
+  }
+  @media screen and (max-width: 900px) {
+    .container{
+        grid-template-columns: 1fr;
+    }
+  }
+
