--- a/styles.css
+++ b/styles.css
@@ -7,33 +7,57 @@ body{
     margin: 0;
     font-family: 'Montserrat', sans-serif;
 }
+header{
+    background-image: linear-gradient(#001219, #001e2a);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 8%;
+}
+li, a, button{
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.1em;
+    color: #f8f8f7;
+    text-decoration: none;
+}
+#logo{
+    width: 180px;
+    height: 90px;
+}
+.nav-links{
+    transition: all 0.2s ease 0s;
+}
+.nav-links li{
+    display:inline-block;
+    padding: 0px 60px;
+}
+.nav-links li a{
+    transition: all 0.2s ease 0s;
+}
+.nav-links li a:hover{
+    color: #005f73;
+}
+button{
+    padding: 9px 30px;
+    background-color: #0a9396;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.2s ease 0s;
+}
+button:hover{
+    background-color: #005f73;
+}
 #container{
-    padding-top: 35vh;
+    padding-top: 15vh;
     margin-left: 250px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-nav{
-    background-color: #2b3133;
-    color: aliceblue;
-    position: fixed;
-    width: 200px;
-    height: 100vh;
-    font-weight: 600;
-}
-.navItem{
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 10px;
-}
-nav a{
-    text-decoration: none;
-    font-size: 2rem;
-    color: #1daade;
-}
 #card{
-    width: 250px;
-    height: 340px;
+    width: 270px;
+    min-height: 340px;
     padding: 25px;
     margin-bottom: 30px;
     border-radius: 15px;
@@ -49,8 +73,24 @@ nav a{
     text-align: center;
 }
 
-
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1080px) {
+    button{
+        display: none;
+    }
+    .nav-links li{
+        padding: 0px 10px;
+    }
+}
+@media screen and (max-width: 730px) {
+    .nav-links {
+        display: none;
+    }
+    header{
+        display: block;
+        text-align: right;
+    }
+}
+/* @media screen and (max-width: 1500px) {
     .container{
         grid-template-columns: 1fr 1fr 1fr;
     }
@@ -64,5 +104,5 @@ nav a{
     .container{
         grid-template-columns: 1fr;
     }
-  }
+  } */
 
